--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,6 @@
           <artifactId>spring-context</artifactId>
           <version>7.0.1</version>
       </dependency>
-      <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
       <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-webmvc</artifactId>
@@ -51,6 +50,12 @@
           <groupId>com.opencsv</groupId>
           <artifactId>opencsv</artifactId>
           <version>4.1</version>
+      </dependency>
+      <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
       </dependency>
 
   </dependencies>
